src/objects/GBLite__GB_Grid_Folder__c.object
<CustomObject>
    <description>Object that holds the grid and folder names</description>
    <fields>
        <fullName>GBLite__Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Type</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Value</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>GB_Grid_Folder</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GB_Grid_Folders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>